--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
             <version>3.36.0.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.3.6</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
